# octp-python

./: .gitignore  .octp-envelope.json  .octp.toml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  spec-question.md
.github/workflows/: release.yml  test.yml
docs/: ci-integration.md  configuration.md  installation.md  profiles.md  quickstart.md  troubleshooting.md
essay/: founding-essay.md
src/octp/: __init__.py
src/octp/cli/: init.py  main.py  sign.py  verify.py
src/octp/core/: builder.py  envelope.py  validator.py
src/octp/git/: reader.py
src/octp/identity/: keymanager.py  resolver.py
src/octp/integrity/: hasher.py
src/octp/output/: formatter.py  writer.py
src/octp/provenance/: collector.py  models.py
src/octp/verification/: bandit_runner.py  base.py  deps_runner.py  detect_secrets_runner.py  mypy_runner.py  pytest_runner.py  registry.py  ruff_runner.py  safety_runner.py  semgrep_runner.py
tests/: conftest.py  test_envelope.py  test_integrity.py  test_performance.py  test_runners.py
tests/fixtures/: tampered_envelope.json
