[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "octp-python"
version = "0.2.0"
description = "Open Contribution Trust Protocol — reference implementation"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = [
  "open-source",
  "trust",
  "provenance", 
  "security",
  "ai",
  "code-review"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Version Control",
  "Topic :: Security",
]
dependencies = [
  "typer>=0.9",
  "pydantic>=2.0",
  "cryptography>=41.0",
  "gitpython>=3.1",
  "rich>=13.0",
]

[project.urls]
Homepage = "https://octp.dev"
Specification = "https://github.com/openoctp/spec"
Repository = "https://github.com/openoctp/octp-python"
Issues = "https://github.com/openoctp/octp-python/issues"

[project.scripts]
octp = "octp.cli.main:app"

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "ruff>=0.1",
  "mypy>=1.0",
]

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]

[tool.mypy]
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/octp --cov-report=term-missing"

[tool.hatch.build.targets.wheel]
packages = ["src/octp"]